Initial chunk of code borrowed from CSim.
Adding code to resolve and parse URLs using CURL, as per CSim. Then forwarding
parsed strings to libcellml and validating the created model.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,12 @@ project(${PROJECT_NAME} VERSION 0.1.0 LANGUAGES CXX)
 # Produces a target 'cellml'
 find_package(libCellML REQUIRED)
 
-# Documentation says you need the first line, but turning it
-# on results in an error when linking due to duplicate symbols?
-#set(CMAKE_AUTOMOC ON)
-#set(CMAKE_AUTOUIC ON)
+# Old-school Find package for CURL
+find_package(CURL REQUIRED)
+
+# Find libXml2 - Not needed as it is publicly exposed by libCellML so we make sure
+# we use the same one? Probably needed if using a released libCellML rather than one
+# built locally?
+#find_package(LibXml2 REQUIRED)
 
 add_subdirectory(src)
