--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,15 +1,26 @@
 
 set(CMATH_SRCS
+    xmlutils.cpp
     cmath.cpp
     )
 
 set(CMATH_HDRS
-
+    xmlutils.h
     )
 
 add_executable(cmath
     ${CMATH_SRCS}
     ${CMATH_HDRS}
     )
-target_link_libraries(cmath cellml)
-target_include_directories(cmath PRIVATE ${CMAKE_CURRENT_BINARY_DIR} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(cmath cellml ${LIBXML2_LIBRARIES} ${CURL_LIBRARIES})
+target_include_directories(cmath
+    PRIVATE
+    ${CMAKE_CURRENT_BINARY_DIR}
+    ${LIBXML2_INCLUDE_DIR}
+    ${CURL_INCLUDE_DIRS}
+    PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR})
+set_target_properties(cmath PROPERTIES
+  CXX_STANDARD 11
+  CXX_STANDARD_REQUIRED ON
+  )
