Refactoring to make model loading reusable.
Preparing for import resolution by separating out the model loading and validating
so that it can be reused. Also moving the enable_testing() in the CMake to get the
'test' target.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,6 @@ find_package(CURL REQUIRED)
 #find_package(LibXml2 REQUIRED)
 
 add_subdirectory(src)
+# enable testing here to get the 'test' target.
+enable_testing()
+add_subdirectory(testing)
