Adding model resolver class.
Adding a new class to handle model resolution based on code being worked on under
cellml/libcellml#167.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,14 @@
 
 set(CMATH_SRCS
     modelloader.cpp
+    modelresolver.cpp
     xmlutils.cpp
     cmath.cpp
     )
 
 set(CMATH_HDRS
     modelloader.h
+    modelresolver.h
     xmlutils.h
     )
 
