Adding initial MathExtractor class.
Will be used to look at pulling math out of a valid CellML model.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@
 set(CMATH_SRCS
     modelloader.cpp
     modelresolver.cpp
+    mathextractor.cpp
     xmlutils.cpp
     cmath.cpp
     )
@@ -9,6 +10,7 @@ set(CMATH_SRCS
 set(CMATH_HDRS
     modelloader.h
     modelresolver.h
+    mathextractor.h
     xmlutils.h
     )
 
