--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,19 +17,19 @@ set(CMATH_HDRS
     xmlutils.h
     )
 
-add_executable(cmath
+add_executable(${EXE_NAME}
     ${CMATH_SRCS}
     ${CMATH_HDRS}
     )
-target_link_libraries(cmath cellml ${LIBXML2_LIBRARIES} ${CURL_LIBRARIES})
-target_include_directories(cmath
+target_link_libraries(${EXE_NAME} cellml ${LIBXML2_LIBRARIES} ${CURL_LIBRARIES})
+target_include_directories(${EXE_NAME}
     PRIVATE
     ${CMAKE_CURRENT_BINARY_DIR}
     ${LIBXML2_INCLUDE_DIR}
     ${CURL_INCLUDE_DIRS}
     PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR})
-set_target_properties(cmath PROPERTIES
+set_target_properties(${EXE_NAME} PROPERTIES
   CXX_STANDARD 11
   CXX_STANDARD_REQUIRED ON
   )
